[package]
name = "misty-codegen-rs"
description = "Misty language code generator targetting the Rust language"
version = "0.0.1"
rust-version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
