[package]
name = "misty-codegen-rs"
description = "Misty language code generator targetting the Rust language"
version = "0.0.2"
rust-version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
misty-ast = { workspace = true }
misty-core = { workspace = true }
misty-net = { workspace = true }
misty-parser = { workspace = true }

heck = { workspace = true }

blake3 = { workspace = true }

quote = { workspace = true }
proc-macro2 = { workspace = true }

thiserror = { workspace = true }

tracing = { workspace = true }