[package]
name = "misty-core"
description = "Core types and shared utilities used by other Misty crates"
version = "0.0.3"
rust-version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
misty-parser = { workspace = true }

thiserror = { workspace = true }