[package]
name = "misty-net"
description = "Networking code for Misty, utility functions for codegen, router, client, and server implementations"
version = "0.0.2"
rust-version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio-util = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

quinn = { workspace = true }

serde = { workspace = true }
bytes = { workspace = true }
rmp-serde = { workspace = true }

thiserror = { workspace = true }

tracing = { workspace = true }