[package]
name = "misty-parser"
description = "Parser code required by the Misty Compiler"
version = "0.0.3"
rust-version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
misty-ast = { workspace = true }

pest = { workspace = true }
pest_derive = { workspace = true }

thiserror = { workspace = true }

tracing = { workspace = true }
